--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - master  # Here source code branch is `master`, it could be other branch
-
+  schedule:
+    - cron:  '0 * * * *'
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
